--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,47 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="column1">NAME</string>
+    <string name="column2">NIC</string>
+    <string name="column3">ADDRESS</string>
+    <string name="column4">EMAIL</string>
+    <string name="column5">PHONE</string>
+    <string name="column6">LICENSE</string>
+    <string name="column7">USERNAME</string>
+    <string name="column8">PASSWORD</string>
+    <string name="txt1">USERNAME</string>
+    <string name="txt2">PASSWORD</string>
+    <string name="btn1">LOGIN</string>
+    <string name="btn2">REGISTER HERE</string>
+    <string name="txt3">Full Name</string>
+    <string name="txt4">User Name</string>
+    <string name="txt5">Email</string>
+    <string name="txt6">Address</string>
+    <string name="txt7">Phone Number</string>
+    <string name="txt8">Password</string>
+    <string name="txt9">Confirm Password</string>
+    <string name="txt10">Gender</string>
+    <string name="radio1">Male</string>
+    <string name="radio2">Female</string>
+    <string name="btn3">REGISTER</string>
+    <string name="txt11">Admin Dashboard</string>
+    <string name="txt12">NEW DELIVERY BOY</string>
+    <string name="txt13">DELIVERY STATUS</string>
+    <string name="txt14">ORDERS</string>
+    <string name="txt15">MANAGE EMPLOYEE</string>
+    <string name="txt16">INVENTORY</string>
+    <string name="txt17">CUSTOMER</string>
+    <string name="txt18">NIC</string>
+    <string name="txt19">Driving License</string>
+    <string name="btn4">INSERT</string>
+    <string name="column9">ORDER ID</string>
+    <string name="column10">CUSTOMER ID</string>
+    <string name="column11">CUSTOMER NAME</string>
+    <string name="column12">STATUS</string>
+    <string name="column13">DELIVERY ID</string>
+    <string name="column14">UPDATE</string>
+    <string name="txt20">WELLCOME TO GROCRY MAD</string>
+    <string name="txt21">VEGETABLES</string>
+    <string name="txt22">FRUITS</string>
+    <string name="txt23">GROCERY</string>
+    <string name="btn5">SHOW DETAILS</string>
 </resources>
