--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,9 +39,48 @@
     <string name="column12">STATUS</string>
     <string name="column13">DELIVERY ID</string>
     <string name="column14">UPDATE</string>
-    <string name="txt20">WELLCOME TO GROCRY MAD</string>
+    <string name="txt20">WELLCOME TO GROCERY MAD</string>
     <string name="txt21">VEGETABLES</string>
     <string name="txt22">FRUITS</string>
     <string name="txt23">GROCERY</string>
     <string name="btn5">SHOW DETAILS</string>
+    <string name="title">MANAGER DASHBOARD</string>
+    <string name="view1">VIEW PRODUCTS</string>
+    <string name="view2">NEW PRODUCT</string>
+    <string name="view3">EDIT PRODUCT</string>
+    <string name="view4">"SHOPPING CART "</string>
+    <string name="view6">REMOVE PRODUCT</string>
+    <string name="view5">SEARCH PRODUCT</string>
+    <string name="hint1">Enter Product Name</string>
+    <string name="hint2">Enter Price</string>
+    <string name="hint3">Enter Category</string>
+    <string name="col1">PRODUCT NAME</string>
+    <string name="col2">CATEGORY</string>
+    <string name="col3">PRICE</string>
+    <string name="name1">Lettuce</string>
+    <string name="qty1">1kg</string>
+    <string name="price1">Rs. 25.00</string>
+    <string name="name2">Carrot</string>
+    <string name="price2">Rs. 250.00</string>
+    <string name="name3">Red Cabbage</string>
+    <string name="price3">Rs. 125.00</string>
+    <string name="name4">Red Capsicum</string>
+    <string name="name5">Okra</string>
+    <string name="name6">Yellow Capsicum</string>
+    <string name="name7">Onion</string>
+    <string name="name8">Tomato</string>
+    <string name="fruit1">Water Melon</string>
+    <string name="fruit2">Orange</string>
+    <string name="fruit3">Grapes</string>
+    <string name="fruit4">Black Grapes</string>
+    <string name="fruit5">Pears</string>
+    <string name="fruit6">Vilad Mango</string>
+    <string name="fruit7">Pomegranate</string>
+    <string name="fruit8">Pineapple</string>
+    <string name="cart">ADD TO CART</string>
+    <string name="btn6">UPDATE</string>
+    <string name="cat1">VEGETABLES</string>
+    <string name="cat2">FRUITS</string>
+    <string name="btn7">BACK</string>
+    <string name="btn8">NEXT</string>
 </resources>
