Item Interfaces edit1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="hint1">Enter Product Name</string>
     <string name="hint2">Enter Price</string>
     <string name="hint3">Enter Category</string>
+    <string name="hint4">Enter Item ID</string>
     <string name="col1">PRODUCT NAME</string>
     <string name="col2">CATEGORY</string>
     <string name="col3">PRICE</string>
