Update Items with edit Interfaces

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="cat2">FRUITS</string>
     <string name="btn7">BACK</string>
     <string name="btn8">NEXT</string>
+    <string name="btn10">SEARCH</string>
     <string name="start">GET START</string>
     <string name="backDash">BACK TO DASHBOARD</string>
 
