--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="btn7">BACK</string>
     <string name="btn8">NEXT</string>
     <string name="btn10">SEARCH</string>
+    <string name="btn11">CLEAR</string>
     <string name="start">GET START</string>
     <string name="backDash">BACK TO DASHBOARD</string>
 
